--- a/notebooks/eda_data_cleaning.ipynb
+++ b/notebooks/eda_data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,29 +18,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "2025-01-24 15:09:17,037 WARNING Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x00000221BD56A210>: Failed to resolve 'www.kaggle.com' ([Errno 11001] getaddrinfo failed)\")': /api/v1/datasets/metadata/alexteboul/heart-disease-health-indicators-dataset\n",
+      "2025-01-24 15:09:17,037 WARNING Retrying (Retry(total=1, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x00000221BD3C9B50>: Failed to resolve 'www.kaggle.com' ([Errno 11001] getaddrinfo failed)\")': /api/v1/datasets/metadata/alexteboul/heart-disease-health-indicators-dataset\n",
+      "2025-01-24 15:09:17,038 WARNING Retrying (Retry(total=0, connect=None, read=None, redirect=None, status=None)) after connection broken by 'NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x00000221C0596180>: Failed to resolve 'www.kaggle.com' ([Errno 11001] getaddrinfo failed)\")': /api/v1/datasets/metadata/alexteboul/heart-disease-health-indicators-dataset\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connection.py\", line 199, in _new_conn\n",
+      "    sock = connection.create_connection(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\util\\connection.py\", line 60, in create_connection\n",
+      "    for res in socket.getaddrinfo(host, port, family, socket.SOCK_STREAM):\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\socket.py\", line 976, in getaddrinfo\n",
+      "    for res in _socket.getaddrinfo(host, port, family, type, proto, flags):\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "socket.gaierror: [Errno 11001] getaddrinfo failed\n",
       "\n",
-      "  0%|          | 0.00/2.66M [00:00<?, ?B/s]\n",
-      " 38%|███▊      | 1.00M/2.66M [00:06<00:10, 168kB/s]\n",
-      " 75%|███████▌  | 2.00M/2.66M [00:07<00:02, 292kB/s]\n",
-      "100%|██████████| 2.66M/2.66M [00:09<00:00, 345kB/s]\n",
-      "100%|██████████| 2.66M/2.66M [00:09<00:00, 299kB/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset URL: https://www.kaggle.com/datasets/alexteboul/heart-disease-health-indicators-dataset\n",
-      "License(s): CC0-1.0\n",
-      "Downloading heart-disease-health-indicators-dataset.zip to ../Data/raw\n",
-      "\n"
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 789, in urlopen\n",
+      "    response = self._make_request(\n",
+      "               ^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 490, in _make_request\n",
+      "    raise new_e\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 466, in _make_request\n",
+      "    self._validate_conn(conn)\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 1095, in _validate_conn\n",
+      "    conn.connect()\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connection.py\", line 693, in connect\n",
+      "    self.sock = sock = self._new_conn()\n",
+      "                       ^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connection.py\", line 206, in _new_conn\n",
+      "    raise NameResolutionError(self.host, self, e) from e\n",
+      "urllib3.exceptions.NameResolutionError: <urllib3.connection.HTTPSConnection object at 0x00000221C05963C0>: Failed to resolve 'www.kaggle.com' ([Errno 11001] getaddrinfo failed)\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<frozen runpy>\", line 198, in _run_module_as_main\n",
+      "  File \"<frozen runpy>\", line 88, in _run_code\n",
+      "  File \"c:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Scripts\\kaggle.exe\\__main__.py\", line 7, in <module>\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\cli.py\", line 63, in main\n",
+      "    out = args.func(**command_args)\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\api\\kaggle_api_extended.py\", line 1571, in dataset_download_cli\n",
+      "    self.metadata_get_with_http_info(owner_slug, dataset_slug))\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\api\\kaggle_api.py\", line 3335, in metadata_get_with_http_info\n",
+      "    return self.api_client.call_api(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\api_client.py\", line 313, in call_api\n",
+      "    return self.__call_api(resource_path, method,\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\api_client.py\", line 145, in __call_api\n",
+      "    response_data = self.request(\n",
+      "                    ^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\api_client.py\", line 335, in request\n",
+      "    return self.rest_client.GET(url,\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\rest.py\", line 231, in GET\n",
+      "    return self.request(\"GET\", url,\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\kaggle\\rest.py\", line 204, in request\n",
+      "    r = self.pool_manager.request(method, url,\n",
+      "        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\_request_methods.py\", line 135, in request\n",
+      "    return self.request_encode_url(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\_request_methods.py\", line 182, in request_encode_url\n",
+      "    return self.urlopen(method, url, **extra_kw)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\poolmanager.py\", line 443, in urlopen\n",
+      "    response = conn.urlopen(method, u.request_uri, **kw)\n",
+      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 873, in urlopen\n",
+      "    return self.urlopen(\n",
+      "           ^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 873, in urlopen\n",
+      "    return self.urlopen(\n",
+      "           ^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 873, in urlopen\n",
+      "    return self.urlopen(\n",
+      "           ^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\connectionpool.py\", line 843, in urlopen\n",
+      "    retries = retries.increment(\n",
+      "              ^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Fernando\\Desktop\\Yo\\Programacion\\proyectos\\heart-disease-health\\env\\Lib\\site-packages\\urllib3\\util\\retry.py\", line 519, in increment\n",
+      "    raise MaxRetryError(_pool, url, reason) from reason  # type: ignore[arg-type]\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "urllib3.exceptions.MaxRetryError: HTTPSConnectionPool(host='www.kaggle.com', port=443): Max retries exceeded with url: /api/v1/datasets/metadata/alexteboul/heart-disease-health-indicators-dataset (Caused by NameResolutionError(\"<urllib3.connection.HTTPSConnection object at 0x00000221C05963C0>: Failed to resolve 'www.kaggle.com' ([Errno 11001] getaddrinfo failed)\"))\n"
      ]
     }
    ],
@@ -57,15 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Archive:  ../Data/raw/heart-disease-health-indicators-dataset.zip\n",
-      "  inflating: ../Data/raw/heart_disease_health_indicators_BRFSS2015.csv  \n"
+      "^C\n"
      ]
     }
    ],
@@ -82,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,6 +410,31 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['HeartDiseaseorAttack', 'HighBP', 'HighChol', 'CholCheck', 'BMI',\n",
+       "       'Smoker', 'Stroke', 'Diabetes', 'PhysActivity', 'Fruits', 'Veggies',\n",
+       "       'HvyAlcoholConsump', 'AnyHealthcare', 'NoDocbcCost', 'GenHlth',\n",
+       "       'MentHlth', 'PhysHlth', 'DiffWalk', 'Sex', 'Age', 'Education',\n",
+       "       'Income'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   }
  ],
