--- a/notebooks/eda_data_cleaning.ipynb
+++ b/notebooks/eda_data_cleaning.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -428,13 +428,79 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df.columns\n",
+    "#para más información sobre las columnas, puede visitar el archivo en la raiz del proyecto llamado \"descriptionColumns.md\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(253680, 22)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253680 entries, 0 to 253679\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   HeartDiseaseorAttack  253680 non-null  float64\n",
+      " 1   HighBP                253680 non-null  float64\n",
+      " 2   HighChol              253680 non-null  float64\n",
+      " 3   CholCheck             253680 non-null  float64\n",
+      " 4   BMI                   253680 non-null  float64\n",
+      " 5   Smoker                253680 non-null  float64\n",
+      " 6   Stroke                253680 non-null  float64\n",
+      " 7   Diabetes              253680 non-null  float64\n",
+      " 8   PhysActivity          253680 non-null  float64\n",
+      " 9   Fruits                253680 non-null  float64\n",
+      " 10  Veggies               253680 non-null  float64\n",
+      " 11  HvyAlcoholConsump     253680 non-null  float64\n",
+      " 12  AnyHealthcare         253680 non-null  float64\n",
+      " 13  NoDocbcCost           253680 non-null  float64\n",
+      " 14  GenHlth               253680 non-null  float64\n",
+      " 15  MentHlth              253680 non-null  float64\n",
+      " 16  PhysHlth              253680 non-null  float64\n",
+      " 17  DiffWalk              253680 non-null  float64\n",
+      " 18  Sex                   253680 non-null  float64\n",
+      " 19  Age                   253680 non-null  float64\n",
+      " 20  Education             253680 non-null  float64\n",
+      " 21  Income                253680 non-null  float64\n",
+      "dtypes: float64(22)\n",
+      "memory usage: 42.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   }
  ],
